# Swaperex

./: .dockerignore  .env.example  .gitignore  .gitpod.yml  AUDIT.md  Dockerfile  Dockerfile.dev  QA_WALLET_SCAN.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  ecosystem.config.cjs  pyproject.toml  requirements.txt
.cursor/rules/: cost-control-agent.mdc  senior-production-engineer.mdc  swaperex-dex-owner-growth.mdc  swaperex-north-star.mdc  swaperex-pro-dex-prompt-engineer.mdc  swaperex-product-workflow.mdc  swaperex-project-brain.mdc
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
backend/: package-lock.json  package.json
backend-signals/: QA_WALLET_SCAN.md  QA_WALLET_SCAN_COVALENT.md  package-lock.json  package.json  tsconfig.json
backend-signals/docs/: ERROR_HANDLING.md
backend-signals/src/: api.ts  index.ts  oneinchProxy.ts
backend/src/: index.ts
contracts/: README.md  foundry.toml
contracts/script/: DeployPancakeWrapper.s.sol  DeployPancakeWrapperV2.s.sol  DeployUniswapWrapper.s.sol  DeployUniswapWrapperV2.s.sol  DeployUniswapWrapperV3.s.sol
contracts/src/: SwaperexPancakeV3FeeWrapper.sol  SwaperexPancakeV3FeeWrapperV2.sol  SwaperexUniswapV3FeeWrapper.sol  SwaperexUniswapV3FeeWrapperV2.sol  SwaperexUniswapV3FeeWrapperV3.sol
contracts/test/: FeeMath.t.sol  SwaperexPancakeV3FeeWrapper.fork.t.sol  SwaperexPancakeV3FeeWrapper.unit.t.sol  SwaperexPancakeV3FeeWrapperV2.unit.t.sol  SwaperexUniswapV3FeeWrapper.fork.t.sol  SwaperexUniswapV3FeeWrapper.unit.t.sol  SwaperexUniswapV3FeeWrapperV2.fork.t.sol  SwaperexUniswapV3FeeWrapperV2.unit.t.sol  SwaperexUniswapV3FeeWrapperV3.fork.t.sol  SwaperexUniswapV3FeeWrapperV3.unit.t.sol
docs/: CODEBASE_AUDIT.md  DEVOPS_AUDIT_2026-02-15.md  FEATURE_MATRIX.md  PORTFOLIO_PROD_HARDENING.md  PORTFOLIO_V2_AUDIT.md  PRODUCTION_WORKFLOW.md  PRODUCT_TRUTH.md  RELEASE_CANARY_RUNBOOK.md  SCREENER_V2.md  SECURITY_AUDIT_NOTES.md  SEND_V2.md  SERVICE_MAP.md  UI_ISSUES_AUDIT_REPORT.md  WALLET_CONNECTION.md  revenue-backend-architecture.md  wallet-scan.md
docs/audits/: SWAPEREX_DEPLOY_PIPELINE_SIMPLIFICATION_PLAN.md  SWAPEREX_P10_1_PRODUCTION_DEPLOY.md  SWAPEREX_P10_CONSOLE_POLISH.md  SWAPEREX_P11_1_PRODUCTION_DEPLOY.md  SWAPEREX_P11_2_OPERATOR_WALLET_SMOKE.md  (+203 more)
frontend/: .env.example  .env.production  AUDIT_REPORT.md  BACKEND_VERIFICATION.md  DEPLOY.md  INTEGRATION_PLAN.md  P1_FIXES_SUMMARY.md  PAGE_MAPPING.md  QA_VERIFICATION_REPORT.md  SCOPE.md  SIGNALS_INTEGRATION.md  SWAP_PREVIEW_UX.md  TESTING_AUDIT.md  WALLET_UX.md  WITHDRAWAL_UX.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
mm2_setup/: .gitignore  MM2_template.json  README.md  activate_coins.sh  coins.json  fix_vps_rpc.sh  start_mm2.sh  stop_mm2.sh
nginx/: swaperex.conf
reports/: browser-wallet-qa-20260707.json  commission-coverage-audit.json  commission-pair-audit-20260707.json  commission-pair-audit-20260716.json  manual-qa-swap-surface-20260707.json  native-route-candidate-audit-20260718.json  native-route-fork-execution-20260718-1-ETH-WBTC.json  native-route-fork-execution-20260718-56-BNB-BTCB_56-BNB-CAKE_56-BNB-ETH_56-BNB-USDC_56-BNB-USDT.json  native-route-fork-execution-20260718.json  p16-mobile-walletconnect-cert.json  p16-route-navigation-smoke.json
scripts/: add_swap_tx_hash.py  alembic_migrate.py  apply-nginx-dev.sh  apply-nginx-dex.sh  backup.py  build-frontend.sh  credit_balance.py  deploy-dev-frontend.sh  deploy-frontend.sh  deploy_vps.sh  derive_dash_key.py  derive_xpub.py  dev-restore-from-prod.sh  dev-vite-preview.sh  dev.sh  migrate.py  migrate_hd_wallet.py  prod-deploy.sh  reconcile.py  run_all.sh  run_api.sh  run_bot.sh  run_tests.sh  safe-prod-deploy.sh  server-inventory.sh  smoke-test-dex.sh  smoke_signals.sh  start-local.sh  start_dev.sh  swaperex-admin.service  verify-local.sh  verify_system.py  vps-auto-update.sh  webhook-server.js
tests/: __init__.py  conftest.py  test_api.py  test_app_admin.py  test_components.py  test_ledger.py  test_ledger_integrity.py  test_operator_decision_support.py  test_operator_intelligence.py  test_router.py
(+987 files in other folders)
