[project]
name = "swaperex"
version = "0.1.0"
description = "Telegram crypto wallet bot with multi-route swaps"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Swaperex Team" }]

dependencies = [
    "aiogram>=3.4.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",  # PostgreSQL async driver
    "greenlet>=3.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "cryptography>=42.0.0",  # For xpub encryption
    "bip_utils>=2.9.0",  # For HD wallet address derivation
    "base58>=2.1.0",  # For Solana address encoding
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]
# AWS KMS signing support
kms = [
    "boto3>=1.34.0",
]
# Hardware Security Module (HSM) signing support
hsm = [
    "python-pkcs11>=0.7.0",
]
# Local signing dependencies
signing = [
    "ecdsa>=0.18.0",
    "eth-keys>=0.5.0",
    "eth-account>=0.11.0",
    "pycryptodome>=3.20.0",
]
# All signing backends
all-signing = [
    "boto3>=1.34.0",
    "python-pkcs11>=0.7.0",
    "ecdsa>=0.18.0",
    "eth-keys>=0.5.0",
    "eth-account>=0.11.0",
    "pycryptodome>=3.20.0",
]
# Swap execution dependencies
swap = [
    "web3>=6.15.0",  # EVM chains (ETH, BNB, LINK)
    "solders>=0.21.0",  # Solana transaction signing
    "solana>=0.32.0",  # Solana RPC client
    "cosmpy>=0.9.0",  # Cosmos/Osmosis
    "pycardano>=0.10.0",  # Cardano
    "bitcoinlib>=0.6.0",  # Bitcoin/Litecoin for THORChain
]
# Full installation with all features
full = [
    "boto3>=1.34.0",
    "python-pkcs11>=0.7.0",
    "ecdsa>=0.18.0",
    "eth-keys>=0.5.0",
    "eth-account>=0.11.0",
    "pycryptodome>=3.20.0",
    "web3>=6.15.0",
    "solders>=0.21.0",
    "solana>=0.32.0",
    "cosmpy>=0.9.0",
    "pycardano>=0.10.0",
    "bitcoinlib>=0.6.0",
]

[project.scripts]
swaperex = "swaperex.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
